修改demo演示，添加动态添加和移除条目;

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -18,11 +18,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ViewPagerActivity">
-        </activity>
-
-        <activity android:name=".FragmentManagerActivity">
-        </activity>
+        <activity android:name=".ViewPagerActivity"/>
+        <activity android:name=".FragmentManagerActivity"/>
+        <activity android:name=".DynamicAddItemActivity"/>
     </application>
 
 </manifest>
