--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.compile_sdk_version = 27
+    ext.build_tools_version = "27.0.3"
+
+    ext.min_sdk_version = 16
+    ext.target_sdk_version = 27
+    ext.android_support_version = "27.1.1"
+
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +23,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
