--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,8 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+KEY_FILE_PATH=demo.jks
+KEY_PASSWORD=123456
+KEY_ALIAS=demo
+KEY_STORE_PASSWORD=123456
