迁移到androidX;支持设置lottie

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ViewPagerActivity"/>
+        <activity android:name=".ViewPagerDemoActivity"/>
+        <activity android:name=".LottieDemoActivity"/>
         <activity android:name=".FragmentManagerActivity"/>
         <activity android:name=".DynamicAddItemActivity"/>
     </application>
