--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -20,6 +20,11 @@ android {
         }
     }
 
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+
     buildTypes {
         release {
             minifyEnabled false
