1.支持viewPager2; 2.添加跳转前拦截

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".LottieDemoActivity"/>
         <activity android:name=".FragmentManagerActivity"/>
         <activity android:name=".DynamicAddItemActivity"/>
+        <activity android:name=".ViewPager2DemoActivity"/>
     </application>
 
 </manifest>
