--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation project(':library')
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
